[tool.poetry]
name = "sign-eth-tx-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sign_eth_tx_py"}]

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.11.4"
python-dotenv = "^1.0.0"
eth-abi = "^4.2.1"
eth-utils = "^2.3.1"
logging = "^0.4.9.6"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
